[gd_scene load_steps=2 format=2]

[ext_resource path="res://PropertiesPanel.gd" type="Script" id=1]

[node name="PropertiesPanel" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 67.0
margin_right = 112.0
margin_bottom = 90.0
text = "Properties:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 84.0
margin_right = 324.0
margin_bottom = 230.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 304.0
margin_bottom = 68.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/SeedHBox"]
margin_top = 5.0
margin_right = 35.0
margin_bottom = 19.0
text = "Seed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/SeedHBox"]
margin_left = 85.0
margin_right = 304.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 100
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MotdHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 304.0
margin_bottom = 102.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/MotdHBox"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "Motd:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/MotdHBox"]
margin_left = 87.0
margin_right = 304.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="VBoxContainer/SeedHBox/LineEdit" to="." method="_on_SeedLine_text_changed"]
[connection signal="text_changed" from="VBoxContainer/MotdHBox/LineEdit" to="." method="_on_MotdEdit_text_changed"]
